fixed: link was not set in pt interactions
git-svn-id: file:///srv/local/data/cleanRepo/trunk@18660 a0517364-e873-4167-b1c8-416daa5a6b91